adjust max value for bottom wrapper height, to avoid wonk on tablets.

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@ body {
 #bottom-wrapper {
   width: var(--full-width);
   height: 10px;
-  height: calc(var(--fullheight) - var(--unit) * 4.5);
+  height: var(--bottom-wrapper-height, 100vh);
   overflow: scroll;
 }
 
